--- a/MathProblem.API/Pages/Index.cshtml
+++ b/MathProblem.API/Pages/Index.cshtml
@@ -4,7 +4,18 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="bg-secondary bg-opcity-10 py-2 mb-5">
+    <div class="container">
+        <h1 class="display-4">Welcome to your Math Coach</h1>
+    </div>
+</div>
+
+<div>
+    <div class="container">
+        <form method="post">
+            <div class="mb-3">
+                <button class="btn btn-primary" type="submit">Start</button>
+            </div>
+        </form>
+    </div>
 </div>
