fix evaluate post

--- a/MathProblem.API/Pages/Solve.cshtml
+++ b/MathProblem.API/Pages/Solve.cshtml
@@ -14,7 +14,7 @@
     <div class="container">
         <form method="post">
             <div class="mb-3">
-                <input type="text" class="form-control" id="term" asp-for="Problem!.Term" readonly>
+                <input type="text" class="form-control" id="term" asp-for="Term" readonly>
             </div>
 
             <div class="mb-3">
