--- a/MathProblem.API/Pages/Solve.cshtml
+++ b/MathProblem.API/Pages/Solve.cshtml
@@ -14,21 +14,19 @@
     <div class="container">
         <form method="post">
             <div class="mb-3">
-                <input type="text" class="form-control" id="term" asp-for="Term" readonly>
+                <button class="btn btn-success btn-lg" type="button">@Model.Points</button>
+            </div>
+            
+            <div class="mb-3">
+                <input type="text" class="form-control-lg" id="term" asp-for="Term" readonly center-block>
             </div>
 
             <div class="mb-3">
-                <label for="solution" class="form-label">Solution</label>
-                <input type="number" class="form-control" id="solution" asp-for="Solution" autofocus>
-                <div id="solutionHelp" class="form-text">Your calculated result.</div>
+                <input type="number" class="form-control-lg" id="solution" asp-for="Solution" autofocus center-block>
             </div>
 
             <div class="mb-3">
                 <button class="btn btn-primary" type="submit">Check</button>
-            </div>
-            
-            <div class="mb-3">
-                <input type="text" class="form-control" id="points" asp-for="Points" readonly>
             </div>
         </form>
     </div>
