--- a/MathProblem.API/Pages/Feedback.cshtml
+++ b/MathProblem.API/Pages/Feedback.cshtml
@@ -1,11 +1,11 @@
 ﻿@page
 @{
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = "Feedback";
 }
 
 <div class="bg-secondary bg-opcity-10 py-2 mb-5">
     <div class="container">
-        <h1 class="display-4">Welcome to your Math Coach</h1>
+        <h1 class="display-4">This is your achieved result</h1>
     </div>
 </div>
 
@@ -13,7 +13,7 @@
     <div class="container">
         <form method="post">
             <div class="mb-3">
-                <a href="/config" class="btn btn-primary" role="button">Start</a>
+                <a href="/config" class="btn btn-primary" role="button">go on ...</a>
             </div>
         </form>
     </div>
