checkbox for 10 steps

--- a/MathProblem.API/Pages/Config.cshtml
+++ b/MathProblem.API/Pages/Config.cshtml
@@ -32,6 +32,11 @@
             </div>
 
             <div class="mb-3">
+                <input type="checkbox" id="allowedSteps" checked asp-for="ConfigRequest.AllowSteps" value="">
+                <label for="allowedSteps">Allowing jumping over 10s</label>
+            </div>
+
+            <div class="mb-3">
                 <button class="btn btn-primary" type="submit">Let's Practice</button>
             </div>
         </form>
