add problem list view

--- a/MathProblem.API/Pages/Index.cshtml
+++ b/MathProblem.API/Pages/Index.cshtml
@@ -13,7 +13,7 @@
     <div class="container">
         <form method="post">
             <div class="mb-3">
-                <a href="/config" class="btn btn-primary" role="button">Start</a>
+                <a href="/problemlist" class="btn btn-primary" role="button">Start</a>
             </div>
         </form>
     </div>
