--- a/MathProblem.API/Pages/Feedback.cshtml
+++ b/MathProblem.API/Pages/Feedback.cshtml
@@ -23,7 +23,7 @@
             </div>
 
             <div class="mb-3">
-                <a href="/config" class="btn btn-primary" role="button">go on ...</a>
+                <a href="/problemlist" class="btn btn-primary" role="button">go on ...</a>
             </div>
         </form>
     </div>
