start from list

--- a/MathProblem.API/Pages/ProblemList.cshtml
+++ b/MathProblem.API/Pages/ProblemList.cshtml
@@ -27,7 +27,7 @@
             {
                 <tr>
                     <td>
-                        <form method="post" asp-page-handler="start" asp-route-id="@kvp.Key">
+                        <form method="post" asp-page-handler="start" asp-route-problemkey="@kvp.Key">
                             <button class="btn btn-primary">@(rowNo += 1)</button>
                         </form>
                     </td>
