--- a/MathProblem.API/Pages/Feedback.cshtml
+++ b/MathProblem.API/Pages/Feedback.cshtml
@@ -14,11 +14,11 @@
     <div class="container">
         <form method="post">
             <div class="mb-3">
-                <h3>Points: <button class="btn btn-success btn-lg" type="button">@Model.Points</button></h3>
-                <h3>Target: <button class="btn btn-success btn-lg" type="button">@Model.Target</button></h3>
+                <h4>Points: <button class="btn btn-success" type="button">@Model.Points</button></h4>
+                <h4>Target: <button class="btn btn-success" type="button">@Model.Target</button></h4>
             </div>
 
-            <div>
+            <div class="mb-5">
                 <h2>@Model.Message</h2>
             </div>
 
