--- a/MathProblem.API/Pages/Solve.cshtml
+++ b/MathProblem.API/Pages/Solve.cshtml
@@ -10,24 +10,25 @@
     </div>
 </div>
 
-<div>
-    <div class="container">
-        <form method="post">
-            <div class="mb-3">
-                <button class="btn btn-success btn-lg" type="button">@Model.Points</button>
-            </div>
-            
-            <div class="mb-3">
+
+<div class="container">
+    <form method="post">
+        <div class="row mb-5">
+            <div class="col d-flex justify-content-end">
                 <input type="text" class="form-control-lg" id="term" asp-for="Term" readonly center-block>
             </div>
-
-            <div class="mb-3">
+            <div class="col d-flex justify-content-start">
                 <input type="number" class="form-control-lg" id="solution" asp-for="Solution" autofocus center-block>
             </div>
-
-            <div class="mb-3">
+        </div>
+        
+        <div class="row mb-3">
+            <div class="col d-flex justify-content-end">
                 <button class="btn btn-primary" type="submit">Check</button>
             </div>
-        </form>
-    </div>
+            <div class="col d-flex justify-content-start">
+                <button class="btn btn-success" type="button">@Model.Points</button>
+            </div>
+        </div>
+    </form>
 </div>
