--- a/MathProblem.API/Pages/Solve.cshtml
+++ b/MathProblem.API/Pages/Solve.cshtml
@@ -22,13 +22,21 @@
             </div>
         </div>
         
+        <div class="mb-3 d-flex justify-content-center">
+            <button class="btn btn-primary" type="submit">Check</button>
+        </div>
+
         <div class="row mb-3">
-            <div class="col d-flex justify-content-end">
-                <button class="btn btn-primary" type="submit">Check</button>
+            <div class="col">
+                <div class="progress">
+                    <div class="progress-bar bg-primary" role="progressbar" style="width: @(Model.Achieved)%;" aria-valuenow="@(Model.Achieved)" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
             </div>
-            <div class="col d-flex justify-content-start">
-                <button class="btn btn-success" type="button">@Model.Points</button>
+            <div class="col-md-auto">
+                <button class="btn-sm btn-success" type="button">@Model.Points</button>
             </div>
         </div>
+
+        
     </form>
 </div>
