--- a/MathProblem.API/Pages/Shared/_Layout.cshtml
+++ b/MathProblem.API/Pages/Shared/_Layout.cshtml
@@ -51,6 +51,13 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script>
+        // enable popovers everywhere
+        $(document).ready(function()
+        {
+            $('[data-bs-toggle="popover"]').popover();  
+        });
+    </script>
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
