first try pyramid helper

--- a/MathProblem.API/Pages/Shared/_Layout.cshtml
+++ b/MathProblem.API/Pages/Shared/_Layout.cshtml
@@ -55,7 +55,7 @@
         // enable popovers everywhere
         $(document).ready(function()
         {
-            $('[data-bs-toggle="popover"]').popover();  
+            $('[data-bs-toggle="popover"]').popover({ html : true });  
         });
     </script>
 
