--- a/MathProblem.API/Pages/Solve.cshtml
+++ b/MathProblem.API/Pages/Solve.cshtml
@@ -16,7 +16,8 @@
         <div class="row mb-5">
             <div class="col d-flex justify-content-end">
                 <input type="text" class="form-control-lg" id="term" asp-for="Term" readonly center-block
-                data-bs-toggle="popover" data-bs-placement="left" data-bs-content="That's your pyramid...">
+                data-bs-toggle="popover" data-bs-placement="left" data-html="true"
+                data-bs-content="<div>@Model.Pyramid!.Top</div>">
             </div>
             <div class="col d-flex justify-content-start">
                 <input type="number" class="form-control-lg" id="solution" asp-for="Solution" autofocus center-block>
