problem description, ordering in problem repo as injected

--- a/MathProblem.API/Pages/Admin/Configs/Add.cshtml
+++ b/MathProblem.API/Pages/Admin/Configs/Add.cshtml
@@ -37,7 +37,7 @@
             </div>
 
             <div class="mb-3">
-                <button class="btn btn-primary" type="submit">Let's Practice</button>
+                <button class="btn btn-primary" type="submit">Add</button>
             </div>
         </form>
     </div>
