--- a/MathProblem.API/Pages/Solve.cshtml
+++ b/MathProblem.API/Pages/Solve.cshtml
@@ -12,7 +12,7 @@
 
 
 <div class="container">
-    <form method="post">
+    <form method="post" onsubmit="play()">
         <div class="row mb-5">
             <div class="col d-flex justify-content-end">
                 <input type="text" class="form-control-lg" id="term" asp-for="Term" readonly center-block
