add admin site for changing rules

--- a/MathProblem.API/Pages/Shared/_Layout.cshtml
+++ b/MathProblem.API/Pages/Shared/_Layout.cshtml
@@ -29,7 +29,10 @@
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdownAdmin">
                                 <li>
-                                    <a class="dropdown-item" href="/admin/configs/add">Add New Config</a>
+                                    <a class="dropdown-item" href="/admin/configs/addproblem">Add New Config</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="/admin/configs/setrules">Set Rules</a>
                                 </li>
                             </ul>
                         </li>
