--- a/MathProblem.API/Pages/Solve.cshtml
+++ b/MathProblem.API/Pages/Solve.cshtml
@@ -1,4 +1,4 @@
-﻿@page "{id:guid}"
+﻿@page "{id:guid}/{success:bool}"
 @model SolveModel
 @{
     ViewData["Title"] = "Solving Problem";
@@ -31,15 +31,10 @@
         <div class="row mb-3">
             <div class="col">
                 <div class="progress">
-                    <div class="progress-bar bg-primary" role="progressbar" style="width: @(Model.Achieved)%;" aria-valuenow="@(Model.Achieved)" aria-valuemin="0" aria-valuemax="100"></div>
+                    <div class="progress-bar @(Model.Success.HasValue && Model.Success.Value ? "bg-primary" : "bg-danger")" style="width: @(Model.Achieved)%;">@Model.Points</div>
                 </div>
             </div>
-            <div class="col-md-auto">
-                <button class="btn-sm btn-success" type="button">@Model.Points</button>
-            </div>
         </div>
-
-        
     </form>
 </div>
 
