--- a/MathProblem.API/Pages/Solve.cshtml
+++ b/MathProblem.API/Pages/Solve.cshtml
@@ -30,7 +30,7 @@
         <div class="row mb-3">
             <div class="col">
                 <div class="progress">
-                    <div class="progress-bar @(Model.Success.HasValue && Model.Success.Value ? "bg-primary" : "bg-danger")" style="width: @(Model.Achieved)%;">@Model.Points</div>
+                    <div class="progress-bar @(Model.Success ? "bg-primary" : "bg-danger")" style="width: @(Model.Achieved)%;">@Model.Points</div>
                 </div>
             </div>
         </div>
