add start page, passing problem and rules key

--- a/MathProblem.API/Pages/Solve.cshtml
+++ b/MathProblem.API/Pages/Solve.cshtml
@@ -1,4 +1,4 @@
-﻿@page "{gameId:guid}/{success:bool}"
+﻿@page "{gameId:guid}/{success:bool?}"
 @model SolveModel
 @{
     ViewData["Title"] = "Solving Problem";
