--- a/MathProblem.API/Pages/Admin/Configs/AddGenerator.cshtml
+++ b/MathProblem.API/Pages/Admin/Configs/AddGenerator.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
-@model AddProblem
+@model AddGenerator
 @{
-    ViewData["Title"] = "Problem Configuration";
+    ViewData["Title"] = "Problem Generator Configuration";
 }
 
 <div class="bg-secondary bg-opcity-10 py-2 mb-5">
