add config page to set players name

--- a/MathProblem.API/Pages/ProblemList.cshtml
+++ b/MathProblem.API/Pages/ProblemList.cshtml
@@ -6,7 +6,7 @@
 
 <div class="bg-secondary bg-opcity-10 py-2 mb-5">
     <div class="container">
-        <h1 class="display-4">Available Problems</h1>
+        <h1 class="display-4">Verfügbare Aufgaben</h1>
     </div>
 </div>
 
@@ -15,7 +15,7 @@
         <thead>
             <tr>
                 <td><b>#</b></td>
-                <td><b>Description</b></td>
+                <td><b>Beschreibung</b></td>
                 <td><b>Config</b></td>
             </tr>
         </thead>
