--- a/MathProblem.API/Pages/Feedback.cshtml
+++ b/MathProblem.API/Pages/Feedback.cshtml
@@ -6,7 +6,7 @@
 
 <div class="bg-secondary bg-opcity-10 py-2 mb-5">
     <div class="container">
-        <h1 class="display-4">@Model.Player, this is your achieved result</h1>
+        <h1 class="display-4">@Model.Player, das ist dein erreichtes Resultat</h1>
     </div>
 </div>
 
