--- a/MathProblem.API/Pages/Shared/_Layout.cshtml
+++ b/MathProblem.API/Pages/Shared/_Layout.cshtml
@@ -34,6 +34,9 @@
                                 <li>
                                     <a class="dropdown-item" href="/admin/configs/setrules">Set Rules</a>
                                 </li>
+                                <li>
+                                    <a class="dropdown-item" href="/admin/configs/setname">Set Player</a>
+                                </li>
                             </ul>
                         </li>
                     </ul>
